--- a/.github/workflows/ukiki-backend-actions.yml
+++ b/.github/workflows/ukiki-backend-actions.yml
@@ -25,6 +25,5 @@ jobs:
       run: chmod +x gradlew     
       
     - name: Build with Gradle
-      uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
-      with:
-        arguments: build
+        run: ./gradlew build
+        shell: bash
