--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,10 @@ tasks.named('test') {
 	useJUnitPlatform()
 }
 
+test.onlyIf {
+	!project.hasProperty('test')
+}
+
 
 def querydslDir = "$buildDir/generated/querydsl"
 querydsl {
